// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/pip_requirements/extract extractPackageFile() extracts dependencies 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==0.3.1",
      "currentVersion": "0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
    },
    Object {
      "currentValue": "==1.0.0",
      "currentVersion": "1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
    },
    Object {
      "currentValue": "==1.9",
      "currentVersion": "1.9",
      "datasource": "pypi",
      "depName": "not_semver",
    },
  ],
  "registryUrls": Array [
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`manager/pip_requirements/extract extractPackageFile() extracts multiple dependencies 1`] = `
Array [
  Object {
    "currentValue": "==1",
    "currentVersion": "1",
    "datasource": "pypi",
    "depName": "Django",
  },
  Object {
    "currentValue": "==0.6.27",
    "currentVersion": "0.6.27",
    "datasource": "pypi",
    "depName": "distribute",
  },
  Object {
    "currentValue": "==0.2",
    "currentVersion": "0.2",
    "datasource": "pypi",
    "depName": "dj-database-url",
  },
  Object {
    "currentValue": "==2.4.5",
    "currentVersion": "2.4.5",
    "datasource": "pypi",
    "depName": "psycopg2",
  },
  Object {
    "currentValue": "==0.1.2",
    "currentVersion": "0.1.2",
    "datasource": "pypi",
    "depName": "wsgiref",
  },
]
`;

exports[`manager/pip_requirements/extract extractPackageFile() handles comments and commands 1`] = `
Array [
  Object {
    "currentValue": "==1.11.23",
    "currentVersion": "1.11.23",
    "datasource": "pypi",
    "depName": "Django",
  },
  Object {
    "currentValue": "==0.6.27",
    "currentVersion": "0.6.27",
    "datasource": "pypi",
    "depName": "distribute",
    "skipReason": "ignored",
  },
  Object {
    "currentValue": "==0.2",
    "currentVersion": "0.2",
    "datasource": "pypi",
    "depName": "dj-database-url",
  },
  Object {
    "currentValue": "==2.4.5",
    "currentVersion": "2.4.5",
    "datasource": "pypi",
    "depName": "psycopg2",
  },
  Object {
    "currentValue": "==0.1.2",
    "currentVersion": "0.1.2",
    "datasource": "pypi",
    "depName": "wsgiref",
  },
]
`;

exports[`manager/pip_requirements/extract extractPackageFile() handles extra index url 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "currentVersion": "2.0.12",
      "datasource": "pypi",
      "depName": "Django",
    },
    Object {
      "currentValue": "==4.1.1",
      "currentVersion": "4.1.1",
      "datasource": "pypi",
      "depName": "celery",
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
    },
    Object {
      "currentValue": "==0.3.1",
      "currentVersion": "0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
    },
    Object {
      "currentValue": "==1.0.0",
      "currentVersion": "1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
    },
    Object {
      "currentValue": "==1.9",
      "currentVersion": "1.9",
      "datasource": "pypi",
      "depName": "not_semver",
    },
  ],
  "registryUrls": Array [
    "https://artifactory.company.com/artifactory/api/pypi/python/simple",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`manager/pip_requirements/extract extractPackageFile() handles extra index url and defaults without index to config 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "currentVersion": "2.0.12",
      "datasource": "pypi",
      "depName": "Django",
    },
    Object {
      "currentValue": "==4.1.1",
      "currentVersion": "4.1.1",
      "datasource": "pypi",
      "depName": "celery",
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
    },
    Object {
      "currentValue": "==0.3.1",
      "currentVersion": "0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
    },
    Object {
      "currentValue": "==1.0.0",
      "currentVersion": "1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
    },
    Object {
      "currentValue": "==1.9",
      "currentVersion": "1.9",
      "datasource": "pypi",
      "depName": "not_semver",
    },
  ],
  "registryUrls": Array [
    "AnExistingDefaultUrl",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`manager/pip_requirements/extract extractPackageFile() handles extra index url and defaults without index to pypi 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "currentVersion": "2.0.12",
      "datasource": "pypi",
      "depName": "Django",
    },
    Object {
      "currentValue": "==4.1.1",
      "currentVersion": "4.1.1",
      "datasource": "pypi",
      "depName": "celery",
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
    },
    Object {
      "currentValue": "==0.3.1",
      "currentVersion": "0.3.1",
      "datasource": "pypi",
      "depName": "some-package",
    },
    Object {
      "currentValue": "==1.0.0",
      "currentVersion": "1.0.0",
      "datasource": "pypi",
      "depName": "some-other-package",
    },
    Object {
      "currentValue": "==1.9",
      "currentVersion": "1.9",
      "datasource": "pypi",
      "depName": "not_semver",
    },
  ],
  "registryUrls": Array [
    "https://pypi.org/pypi/",
    "http://example.com/private-pypi/",
  ],
}
`;

exports[`manager/pip_requirements/extract extractPackageFile() handles extras and complex index url 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": "==2.0.12",
      "currentVersion": "2.0.12",
      "datasource": "pypi",
      "depName": "Django",
    },
    Object {
      "currentValue": "==4.1.1",
      "currentVersion": "4.1.1",
      "datasource": "pypi",
      "depName": "celery",
    },
    Object {
      "currentValue": " == 3.2.1",
      "datasource": "pypi",
      "depName": "foo",
    },
  ],
  "registryUrls": Array [
    "https://artifactory.company.com/artifactory/api/pypi/python/simple",
  ],
}
`;
